<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText"
        android:textStyle="italic"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but2"
        android:id="@+id/button2"
        android:onClick="OnDecode"
        android:layout_above="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but3"
        android:id="@+id/button3"
        android:onClick="Sendmsg"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/in"
        android:layout_toStartOf="@+id/button3"
        android:layout_toEndOf="@+id/radioGroup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/radioGroup"
        android:layout_alignTop="@+id/radioGroup" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Vbutton"
        android:text="@string/VBut"
        android:onClick="DispMsg"
        android:layout_above="@+id/editText"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3" />

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:layout_toStartOf="@+id/Vbutton"
    android:id="@+id/radioGroup"
    android:layout_below="@+id/editText"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="42dp">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n1"
        android:id="@+id/radioButton"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/Vbutton"
        android:layout_alignEnd="@+id/Vbutton"
        android:layout_alignBottom="@+id/radioButton5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="OnOne" />

    <RadioButton
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/n2"
        android:id="@+id/radioButton5"
        android:layout_toEndOf="@+id/button4"
        android:layout_above="@+id/radioButton2"
        android:layout_toRightOf="@+id/button4"
        android:onClick="OnTwo" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n3c"
        android:id="@+id/radioButton7"
        android:onClick="OnThreeC" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n3s"
        android:id="@+id/radioButton2"
        android:layout_toStartOf="@+id/radioButton5"
        android:layout_toEndOf="@+id/radioButton4"
        android:layout_above="@+id/radioButton6"
        android:layout_alignLeft="@+id/radioButton6"
        android:layout_alignStart="@+id/radioButton6"
        android:layout_toLeftOf="@+id/radioButton5"
        android:onClick="OnThreeS" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n4s"
        android:id="@+id/radioButton6"
        android:layout_above="@+id/radioButton3"
        android:layout_centerHorizontal="true"
        android:onClick="OnFourS" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n4c"
        android:id="@+id/radioButton8"
        android:onClick="OnFourC" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n5"
        android:id="@+id/radioButton4"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="OnFive" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n6"
        android:id="@+id/radioButton3"
        android:layout_toEndOf="@+id/editText"
        android:layout_alignTop="@+id/radioButton4"
        android:layout_alignLeft="@+id/radioButton5"
        android:layout_alignStart="@+id/radioButton5"
        android:onClick="OnSix" />

</RadioGroup>
</RelativeLayout>
